--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 version: "3.8"
 
 services:
-  devops-tp:
-    build:
-      context: .
-#      dockerfile: Dockerfile.tp
+  web:
+    build: .
     container_name: devops-tp
+    ports:
+      - "5000:5000"
     volumes:
       - .:/home/app
-    stdin_open: true
-    tty: true
